--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@localnerve/google-drive-folder": "^7.9.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
+    "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^11.5.4",
+    "googleapis": "^144.0.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
     "react": "^18",
