--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "framer-motion": "^11.5.4",
     "googleapis": "^144.0.0",
     "lucide-react": "^0.441.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18",
