--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.45.4",
     "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^11.5.4",
     "googleapis": "^144.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.11",
