--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,10 @@
     ],
     "paths": {
       "@/*": ["./*"]
-    }
+    },
+    "types": ["node", "express", "multer", "cors", "bcrypt", "jsonwebtoken", "body-parser"],
+    "typeRoots": ["./node_modules/@types", "./"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "global.d.ts"],
   "exclude": ["node_modules"]
 }
