--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     { "src": "package.json", "use": "@vercel/next" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/server.ts" },
+    { "src": "/api/(.*)", "dest": "api/server.ts" },
     { "src": "/(.*)", "dest": "/$1" }
   ]
 }
