--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
   "version": 2,
   "builds": [
-    { "src": "app/api/server.ts", "use": "@vercel/node" },
-    { "src": "package.json", "use": "@vercel/next" }
+    { "src": "next.config.js", "use": "@vercel/next" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "app/api/server.ts" },
+    { "src": "/api/(.*)", "dest": "/api/$1" },
     { "src": "/(.*)", "dest": "/$1" }
   ]
 }
