--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "server": "ts-node app/api/server.ts"
+    "lint": "next lint"
   },
   "dependencies": {
     "@localnerve/google-drive-folder": "^7.9.0",
@@ -21,20 +21,17 @@
     "@vercel/node": "^3.2.14",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
     "fluent-ffmpeg": "^2.1.3",
     "framer-motion": "^11.5.4",
     "googleapis": "^144.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
     "multer": "^1.4.5-lts.1",
-    "next": "14.2.11",
+    "next": "latest",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -44,9 +41,6 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/body-parser": "^1.19.5",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/fluent-ffmpeg": "^2.1.26",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
