--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lucide-react": "^0.441.0",
     "multer": "^1.4.5-lts.1",
     "next": "latest",
+    "next-connect": "^1.0.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
