--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
     "multer": "^1.4.5-lts.1",
     "next": "latest",
     "next-connect": "^1.0.0",
+    "open": "^10.1.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "server-destroy": "^1.0.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
