--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "get-refresh-token": "node scripts/get_refresh_token.js"
   },
   "dependencies": {
     "@localnerve/google-drive-folder": "^7.9.0",
