--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-particles": "^2.12.2",
     "server-destroy": "^1.0.1",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.5.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
