--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.45.4",
+    "@types/pg": "^8.11.10",
     "@vercel/node": "^3.2.14",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -35,6 +36,7 @@
     "next": "latest",
     "next-connect": "^1.0.0",
     "open": "^10.1.0",
+    "pg": "^8.13.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
