--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.45.4",
     "@types/pg": "^8.11.10",
     "@vercel/node": "^3.2.14",
+    "@vercel/speed-insights": "^1.0.12",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
