--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-particles": "^2.12.2",
     "server-destroy": "^1.0.1",
     "swr": "^2.2.5",
